--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
 			<version>1.15.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
